[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fe507"
authors = [{ name = "Azat Y", email = "steels-06.gasbag@icloud.com" }]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.10"

[project.urls]
Home = "https://azat.cc"

[tool.flit.sdist]
include = ["notebooks/*.ipynb"]
exclude = ["data", "references", "resources", "static", "report"]