[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fe507"
license = { file = "LICENSE" }
authors = [{ name = "Azat Y", email = "steels-06.gasbag@icloud.com" }]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.10"
classifiers = ["Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Home = "https://github.com/azataiot/fe507"

[tool.flit.sdist]
include = ["notebooks/*.ipynb"]
exclude = ["data", "references", "resources", "static", "report"]